# develop_rep

./: README.md
Angular/hotels_origin/: angular.json  karma.conf.js  package-lock.json  package.json
Electron/music_app/: .babelrc  .eslintrc.json  forge.config.ts  package.json  setting.dev.ini  tsconfig.json  webpack.main.config.ts  webpack.plugins.ts  webpack.renderer.config.ts  webpack.rules.ts
Electron/note_app/: package-lock.json  package.json  tsconfig.json  webpack.plugins.js  webpack.renderer.config.js
Electron/radio_app/: package.json  webpack.renderer.config.js
Electron/test-electron-webpack-ts/: .babelrc  package.json  tsconfig.json  webpack.config.js
Electron/test_app/: package-lock.json  package.json  tsconfig.json  webpack.main.config.js  webpack.plugins.js  webpack.renderer.config.js  webpack.rules.js
Electron/test_react_frame_ts/: package-lock.json  package.json  tsconfig.json  webpack.main.config.js  webpack.renderer.config.js  webpack.rules.js
Nvm-easy-bat/: ChangeMVN-mac.command  ChangeNVM-win.bat
React/almanac/: eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
React/blog/: .babelrc  package.json  tsconfig.json
React/color-converter/: index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
Tauri/test-mysql-crud-app/src-tauri/: Cargo.toml  tauri.conf.json
Tauri/test-mysql-crud-app/src-tauri/src/: main.rs  mysql_config.rs
test-area/: README.md  fullscreen.html
test_server/: package-lock.json  package.json  server_config.js  server_connect.js
(+1878 files in other folders)
